Grace/tests/gibbs/errors/t086.grace
// ERROR = P1036
1 + () + 3
